{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 2774,
  "lineage": "1c5b659e-c05d-2c6c-6a3e-654f4faf76c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.10.102.12",
            "association_id": "eipassoc-0f5af83ee16586de7",
            "domain": "vpc",
            "id": "eipalloc-0ee4d9d854c99cbd7",
            "instance": "i-0bb47f58cf72118bb",
            "network_interface": "eni-0eea0c44e438d95cb",
            "private_dns": "ip-10-10-102-12.ap-southeast-1.compute.internal",
            "private_ip": "10.10.102.12",
            "public_dns": "ec2-3-0-252-187.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.252.187",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_internet_gateway.igw",
            "aws_key_pair.bastion",
            "aws_security_group.bastion",
            "aws_subnet.public-sub-2",
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01dbdbb936c401df1",
            "public_dns": "ec2-13-251-80-247.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.80.247",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wordpress-qassie-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c64f7b4062b0a21",
            "arn": "arn:aws:ec2:ap-southeast-1:954492912526:instance/i-0bb47f58cf72118bb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0bb47f58cf72118bb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0eea0c44e438d95cb",
            "private_dns": "ip-10-10-102-12.ap-southeast-1.compute.internal",
            "private_ip": "10.10.102.12",
            "public_dns": "ec2-13-250-13-29.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.13.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-037ffde2a3ad39a0b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0432b51f5a83b5703",
            "tags": {
              "Name": "qassie-bastion-host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01a496620a812a1f7"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion",
            "aws_security_group.bastion",
            "aws_subnet.public-sub-2",
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0df9a2359a3f69456",
            "owner_id": "954492912526",
            "tags": {
              "Name": "wordpress-qassie-internet-gateway",
              "Network": "Public"
            },
            "vpc_id": "vpc-0652cd3b345c15694"
          },
          "dependencies": [
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:954492912526:loadbalancer/app/wordpress-qassie-service-alb/bd49c5fd259d3b06",
            "arn_suffix": "app/wordpress-qassie-service-alb/bd49c5fd259d3b06",
            "dns_name": "wordpress-qassie-service-alb-939727459.ap-southeast-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:954492912526:loadbalancer/app/wordpress-qassie-service-alb/bd49c5fd259d3b06",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-qassie-service-alb",
            "security_groups": [
              "sg-0e644c8522efb6c6f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0432b51f5a83b5703"
              },
              {
                "subnet_id": "subnet-05582c0762df4ff0b"
              }
            ],
            "subnets": [
              "subnet-0432b51f5a83b5703",
              "subnet-05582c0762df4ff0b"
            ],
            "tags": {
              "Name": "wordpress-qassie-service-alb"
            },
            "vpc_id": "vpc-0652cd3b345c15694",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public-sub-1",
            "aws_subnet.public-sub-2",
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:954492912526:listener/app/wordpress-qassie-service-alb/bd49c5fd259d3b06/aef3823aa4af5584",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:954492912526:targetgroup/wordpress-qassie-tg/8d1bd5313de216fb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:954492912526:listener/app/wordpress-qassie-service-alb/bd49c5fd259d3b06/aef3823aa4af5584",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:954492912526:loadbalancer/app/wordpress-qassie-service-alb/bd49c5fd259d3b06",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.lb-target",
            "aws_security_group.alb",
            "aws_subnet.public-sub-1",
            "aws_subnet.public-sub-2",
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:954492912526:targetgroup/wordpress-qassie-tg/8d1bd5313de216fb",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:954492912526:listener-rule/app/wordpress-qassie-service-alb/bd49c5fd259d3b06/aef3823aa4af5584/626c0b49e2eb7804",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:954492912526:listener-rule/app/wordpress-qassie-service-alb/bd49c5fd259d3b06/aef3823aa4af5584/626c0b49e2eb7804",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:954492912526:listener/app/wordpress-qassie-service-alb/bd49c5fd259d3b06/aef3823aa4af5584",
            "priority": 1
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_listener.lb-listener",
            "aws_lb_target_group.lb-target",
            "aws_security_group.alb",
            "aws_subnet.public-sub-1",
            "aws_subnet.public-sub-2",
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:954492912526:targetgroup/wordpress-qassie-tg/8d1bd5313de216fb",
            "arn_suffix": "targetgroup/wordpress-qassie-tg/8d1bd5313de216fb",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:954492912526:targetgroup/wordpress-qassie-tg/8d1bd5313de216fb",
            "lambda_multi_value_headers_enabled": false,
            "name": "wordpress-qassie-tg",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0652cd3b345c15694"
          },
          "dependencies": [
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01dbdbb936c401df1",
            "id": "nat-040f30ef443f4040e",
            "network_interface_id": "eni-02eb1908a51891a1c",
            "private_ip": "10.10.101.170",
            "public_ip": "13.251.80.247",
            "subnet_id": "subnet-05582c0762df4ff0b",
            "tags": {
              "Name": "Private Subnet Natgateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public-sub-1",
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0707b58ebc1ca4cd9",
            "owner_id": "954492912526",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-040f30ef443f4040e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routable-rule-public"
            },
            "vpc_id": "vpc-0652cd3b345c15694"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.natgw1",
            "aws_subnet.public-sub-1",
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a6aa1bdb3d3cebdd",
            "owner_id": "954492912526",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df9a2359a3f69456",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routable-rule-public"
            },
            "vpc_id": "vpc-0652cd3b345c15694"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017ae2dd4bdc2555e",
            "route_table_id": "rtb-0707b58ebc1ca4cd9",
            "subnet_id": "subnet-00916a87e79260cae"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.natgw1",
            "aws_route_table.private1",
            "aws_subnet.private-sub-1",
            "aws_subnet.public-sub-1",
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f743a3c94193bc83",
            "route_table_id": "rtb-0707b58ebc1ca4cd9",
            "subnet_id": "subnet-059e27fbdbe7c41ca"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.natgw1",
            "aws_route_table.private1",
            "aws_subnet.private-sub-2",
            "aws_subnet.public-sub-1",
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb9e8abcd974dbe2",
            "route_table_id": "rtb-0a6aa1bdb3d3cebdd",
            "subnet_id": "subnet-05582c0762df4ff0b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rule",
            "aws_subnet.public-sub-1",
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06867ab3d7389ee5e",
            "route_table_id": "rtb-0a6aa1bdb3d3cebdd",
            "subnet_id": "subnet-0432b51f5a83b5703"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rule",
            "aws_subnet.public-sub-2",
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:954492912526:security-group/sg-0e644c8522efb6c6f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e644c8522efb6c6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress-qassie",
            "name_prefix": null,
            "owner_id": "954492912526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-qassie-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0652cd3b345c15694"
          },
          "dependencies": [
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:954492912526:security-group/sg-01a496620a812a1f7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a496620a812a1f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "124.158.144.202/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_traffic_terr",
            "name_prefix": null,
            "owner_id": "954492912526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "qassie-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0652cd3b345c15694"
          },
          "dependencies": [
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:954492912526:security-group/sg-03bd8822f18241999",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bd8822f18241999",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "wordpress-qassie-allow-ecs",
            "name_prefix": null,
            "owner_id": "954492912526",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0652cd3b345c15694"
          },
          "dependencies": [
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:954492912526:subnet/subnet-00916a87e79260cae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.201.0/24",
            "id": "subnet-00916a87e79260cae",
            "map_public_ip_on_launch": false,
            "owner_id": "954492912526",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0652cd3b345c15694"
          },
          "dependencies": [
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:954492912526:subnet/subnet-059e27fbdbe7c41ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.202.0/24",
            "id": "subnet-059e27fbdbe7c41ca",
            "map_public_ip_on_launch": false,
            "owner_id": "954492912526",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-0652cd3b345c15694"
          },
          "dependencies": [
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:954492912526:subnet/subnet-05582c0762df4ff0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.101.0/24",
            "id": "subnet-05582c0762df4ff0b",
            "map_public_ip_on_launch": true,
            "owner_id": "954492912526",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0652cd3b345c15694"
          },
          "dependencies": [
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:954492912526:subnet/subnet-0432b51f5a83b5703",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.102.0/24",
            "id": "subnet-0432b51f5a83b5703",
            "map_public_ip_on_launch": true,
            "owner_id": "954492912526",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0652cd3b345c15694"
          },
          "dependencies": [
            "aws_vpc.qassie-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "qassie-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:954492912526:vpc/vpc-0652cd3b345c15694",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0481022c1470edf67",
            "default_route_table_id": "rtb-0e7b3c3ff8febadf9",
            "default_security_group_id": "sg-0585295d4665324bd",
            "dhcp_options_id": "dopt-23f5f944",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0652cd3b345c15694",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e7b3c3ff8febadf9",
            "owner_id": "954492912526",
            "tags": {
              "Name": "wordpress-qassie-vpc"
            }
          }
        }
      ]
    }
  ]
}